--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Mai multe detalii despre proiect pot fi găsite accesând următorul link: https://ocw.cs.pub.ro/courses/pm/prj2021/cghenea/intelligent_temp_sensor.
+Un demo de functionare al proiectului il puteți găsi accesând următorul link: https://youtu.be/HAvER53UP7Y.
